syntax = "proto3";

package activity;

option go_package = "github.com/manhrev/runtracking/backend/activity/pkg/api;activity";

import "google/protobuf/timestamp.proto";

service Activity {
    rpc Act(ActivityInfo) returns (ActivityInfo);
}

enum ActivityType {
    ACTIVITY_TYPE_UNSPECIFIED = 0;
    ACTIVITY_TYPE_RUNNING = 1;
    ACTIVITY_TYPE_CYCLING = 2;
    ACTIVITY_TYPE_WALKING = 3;
}

message TrackPoint {
    double longtitude = 1;
    double latitude = 2;
    double altitude = 3;
    google.protobuf.Timestamp created_at = 4;
    bool is_stop_point = 5;
}

message ActivityInfo {
    ActivityType type = 1;
    double total_distance = 2; // meters
    float kcal = 3; // kcal
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 6;
    uint64 duration = 7; // seconds
    repeated TrackPoint route = 8;
}